[workspace]
members = [
    "lib",
    "program",
    "script",
]
resolver = "2"

[workspace.dependencies]
alloy-sol-types = "0.7.7"
alloy-primitives = "0.7.7"
patched-tiny-keccak = { package = "tiny-keccak", version = "2.0.2", git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0", features = ["keccak"]}
unpatched-tiny-keccak = { package = "tiny-keccak", version = "2.0.2", features = ["keccak"]}
